# deepfolio

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
core/: behavior_model.py  causal_analysis.py  fix_parser.py  lp_evaluator.py  lp_router.py  metrics.py  tca.py
deepfolio/: __init__.py  autotrain.py  backtest.py  constraints.py  costs.py  data.py  layers.py  losses.py  metrics.py  models.py  monitor.py  scenario.py  solver_backends.py  train.py
docs/: Makefile  conf.py  index.rst  modules.rst
examples/: AdvancedUsageExample.cpp  BasicUsageExample.cpp  run_analysis.py  run_behavior_analysis.py  run_causal_analysis.py  run_demo.py  run_lp_router.py
include/: thunderfix.h
io/: data_loader.py
src/config/: config.json
src/core/: Authenticator.cpp  Authenticator.h  ConfigurationLoader.cpp  ConfigurationLoader.h  ErrorHander.h  ErrorHandler.cpp  FIXConnection.cpp  FIXConnection.h  FIXParser.cpp  FIXParser.h  FIXSession.cpp  FIXSession.h  Logger.cpp  Logger.h
src/extensions/: AuditLog.cpp  AuditLog.h  DataCompressor.cpp  DataCompressor.h  HeartbeatManager.cpp  HeartbeatManager.h  LatencyOptimizer.cpp  LatencyOptimizer.h  LoadBalancer.cpp  LoadBalancer.h  MessageReplay.cpp  MessageReplay.h  OrderRateLimiter.cpp  OrderRateLimiter.h  RiskControl.cpp  RiskControl.h
src/util/: JSONParser.h  TimeUtils.h
streamlit_app/: intelligence.py
tests/: test_deepfolio.py  test_metrics.py
viz/: dashboard.py
