[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfolio"
version = "0.3.0"
description = "Attention-driven portfolio optimization library"
readme = "README.md"
authors = [
  { name="Jialue Chen", email="jialuechen@outlook.com" },
]
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch>=1.12",
    "pandas",
    "numpy",
]
optional-dependencies = { torchopt = ["torchopt"] }

[project.urls]
homepage = "https://github.com/jialuechen/deepfolio"
